still working on caption layout issues

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -8,7 +8,7 @@ body {
   margin-bottom: 5px;
   margin-right: 7px;
   padding-bottom: 20px;
-  width: 180px;
+  width: 200px;
 }
 
 .photo {
